--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
+lib
+dub.selections.json
 .dub
-docs.json
-__dummy.html
-*.o
-*.obj
-*.lib
-*.exe
-*.dll
-*.dylib
-*.so
-*.a
-*.selections.json
-/.project
+dscanner.ini
+*.kate-swp
+.directory
+.DS_Store
